--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base69 Terminal - Brian Armstrong Stacks ETH</title>
+    <title>Base69 Terminal - Brian Armstrong Saves Ethereum</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -35,7 +35,7 @@
 ██╔══██╗██╔══██║╚════██║██╔══╝  ██╔═══██╗ ╚═══██║
 ██████╔╝██║  ██║███████║███████╗╚██████╔╝ █████╔╝
 ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝ ╚═════╝  ╚════╝ 
-        <span id="ascii-subtitle">BRIAN ARMSTRONG STACKS ETH</span>
+        <span id="ascii-subtitle">BRIAN ARMSTRONG SAVES ETHEREUM</span>
         </div>
 
         <section class="welcome-section">
