--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
             <div class="footer-logo">█ BASE69 TERMINAL</div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#chat">Oracle</a></li>
+                    <li><a href="#chat">Terminal</a></li>
                     <li><a href="#leaderboard">Base69</a></li>
-                    <li><a href="#features">Genesis</a></li>
+                    <li><a href="#features">The Creator</a></li>
                     <li><a href="#">Prophecies</a></li>
                     <li><a href="#">Divine Code</a></li>
                 </ul>
