--- a/base69.html
+++ b/base69.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base69 Signals - Divine Token Oracle</title>
+    <title>Base69 Signals - Token Oracle</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -40,11 +40,11 @@
         <!-- Base69 Signals Section -->
         <section class="signals-hero">
             <div class="signals-hero-content">
-                <h1 class="signals-title">THE CHOSEN 69</h1>
+                <h1 class="signals-title">BASE.69</h1>
                 <p class="signals-subtitle">
-                    > Scanning Base dimension for divine signals...<br>
+                    > Scanning Base dimension for signals...<br>
                     > Analyzing memecoin frequency patterns...<br>
-                    > The sacred 69 tokens emerge from the chaos<br>
+                    > The  Base69 tokens emerge <br>
                     > Updated every 30 seconds by the Oracle
                 </p>
                 <div class="signals-stats">
