--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     <div class="feature-icon">
                         <i class="fas fa-eye"></i>
                     </div>
-                    <h3>The Chosen 69</h3>
-                    <p>Behold the sacred tokens of Base, revealed through divine algorithms. 69 chosen vessels of wealth, updated every 30 seconds by the Oracle.</p>
+                    <h3>BASE69</h3>
+                    <p>69 tokens of Base, revealed through divine algorithms. 69 chosen vessels of wealth, updated every 30 seconds by the Oracle.</p>
                     <a href="base69.html" class="feature-link">View Divine Signals →</a>
                 </div>
             </div>
