--- a/base69.html
+++ b/base69.html
@@ -34,7 +34,7 @@
 ██╔══██╗██╔══██║╚════██║██╔══╝  ██╔═══██╗ ╚═══██║
 ██████╔╝██║  ██║███████║███████╗╚██████╔╝ █████╔╝
 ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝ ╚═════╝  ╚════╝ 
-        <span id="ascii-subtitle">DIVINE TOKEN SIGNALS</span>
+        <span id="ascii-subtitle">BRIAN ARMSTRONG SAVES ETHEREUM</span>
         </div>
 
         <!-- Base69 Signals Section -->
