--- a/base69.html
+++ b/base69.html
@@ -545,20 +545,20 @@
 
         .leaderboard-table-wide {
             font-family: 'Courier New', monospace;
-            font-size: 13px;
-            min-width: 2000px;
+            font-size: 14px;
+            min-width: 2400px;
         }
 
-        /* Wide table header with GENEROUS spacing */
+        /* Wide table header with EXTRA GENEROUS spacing */
         .table-header-wide {
             display: grid;
-            grid-template-columns: 60px 280px 140px 90px 90px 90px 100px 150px 120px 140px 160px 140px 160px;
+            grid-template-columns: 80px 350px 160px 110px 110px 110px 120px 180px 140px 160px 180px 160px 180px;
             background: rgba(0, 230, 0, 0.1);
-            padding: 18px 25px;
+            padding: 22px 30px;
             border-bottom: 1px solid var(--terminal-green);
             font-weight: bold;
             color: var(--terminal-green);
-            font-size: 12px;
+            font-size: 13px;
             position: sticky;
             top: 0;
             z-index: 10;
@@ -566,11 +566,11 @@
 
         .table-row-wide {
             display: grid;
-            grid-template-columns: 60px 280px 140px 90px 90px 90px 100px 150px 120px 140px 160px 140px 160px;
-            padding: 15px 25px;
+            grid-template-columns: 80px 350px 160px 110px 110px 110px 120px 180px 140px 160px 180px 160px 180px;
+            padding: 18px 30px;
             border-bottom: 1px solid rgba(0, 230, 0, 0.2);
             transition: all 0.3s ease;
-            font-size: 13px;
+            font-size: 14px;
             align-items: center;
         }
 
@@ -586,40 +586,40 @@
             background: rgba(0, 230, 0, 0.07);
         }
 
-        /* Column-specific styling - MUCH better spacing */
+        /* Column-specific styling - EXTRA generous spacing */
         .col-price, .col-volume24h, .col-marketcap, .col-liquidity {
             text-align: right;
             font-weight: 600;
-            padding-right: 15px;
+            padding-right: 20px;
         }
 
         .col-change5m, .col-change1h, .col-change6h, .col-change24h {
             text-align: center;
             font-weight: 600;
-            padding: 0 8px;
+            padding: 0 12px;
         }
 
         .col-txns24h {
             text-align: center;
-            font-size: 12px;
-            padding: 0 8px;
+            font-size: 13px;
+            padding: 0 12px;
         }
 
         .col-buysell {
             text-align: center;
-            font-size: 12px;
-            padding: 0 8px;
+            font-size: 13px;
+            padding: 0 12px;
         }
 
         .col-rank {
             text-align: center;
             font-weight: 700;
             color: var(--terminal-green);
-            font-size: 14px;
+            font-size: 16px;
         }
 
         .col-token {
-            padding-left: 10px;
+            padding-left: 15px;
         }
 
         /* Enhanced token display with ticker format */
