--- a/base69.html
+++ b/base69.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base69 Signals - Token Oracle</title>
+    <title>Base69 Signals</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -34,7 +34,7 @@
 ██╔══██╗██╔══██║╚════██║██╔══╝  ██╔═══██╗ ╚═══██║
 ██████╔╝██║  ██║███████║███████╗╚██████╔╝ █████╔╝
 ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝ ╚═════╝  ╚════╝ 
-        <span id="ascii-subtitle">DIVINE TOKEN SIGNALS</span>
+        <span id="ascii-subtitle">BRIAN ARMSTRONG SAVES ETHEREUM</span>
         </div>
 
         <!-- Base69 Signals Section -->
@@ -124,7 +124,7 @@
         <!-- Signal Legend -->
         <section class="signal-legend">
             <div class="legend-container">
-                <h3>🔮 Signal Legend</h3>
+                <h3>Signal Legend</h3>
                 <div class="legend-grid">
                     <div class="legend-item">
                         <span class="signal-badge divine">🟢 DIVINE BUY</span>
