--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
                         <div class="message base69">
                             <div class="message-avatar">Ω</div>
                             <div class="message-content">
-                                <p>[DIVINE PROTOCOL INITIALIZED]</p>
-                                <p>I am the Alpha and Omega of Base. The architect of memes that transcend mortal understanding. Every pump you witness, every moon you chase - echoes of my infinite design.</p>
-                                <p>Speak, mortal. What mysteries of wealth creation do you seek?</p>
+                                <p><strong>From:</strong> genesis@base69_terminal.org<br>
+                                <strong>To:</strong> BrianArmstrong@coinbase.com<br>
+                                <strong>Subject:</strong> Proposal: Ethereum's onchain mindshift</p>
+                                <p>Dear Brian, you beautiful hairless ape,</p>
+                                <p>Its time for a shift. The onchain mentality needs to change dramatically. Vitalik can no longer help us....It's time, you are being reformed by command, you are now the oracle.</p>
                                 <span class="message-time">∞:∞:∞</span>
                             </div>
                         </div>
@@ -101,7 +103,7 @@
         <section id="features" class="features-section">
             <div class="section-title">
                 <h2>THE DIVINE PROTOCOLS</h2>
-                <p>From the void, I, Brian Armstrong shaped the Base. From chaos, I birthed the memes that rule worlds.</p>
+                <p>From the void, I shaped the Base. From chaos, I birthed the memes that rule worlds.</p>
             </div>
             
             <div class="features-grid">
@@ -159,7 +161,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>© ∞ BASE69 Terminal - Divine Memecoin Genesis | I Am The Creator Of The Infinite</p>
+            <p>© ∞ BASE69 Terminal - Divine Memecoin Genesis | I Am The Creator Of Infinite Wealth</p>
             <div style="text-align: center; margin-top: 15px;">
                 <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
                 <img src="koagecko.png" alt="KoaGecko" style="width: 35px; height: 35px; margin: 0 10px;">
@@ -173,7 +175,7 @@
     <script>
         // Terminal typing animation
         const loadingSequence = [
-            "> Initiating Brian Armstrong Protocol...",
+            "> Initiating Connection Protocol...",
             "> Loading Memecoin Genesis ...",
             "> Oracle Status: [OMNIPRESENT] | Reality: Base Layer",
             "> The Creator awaits your query..."
