--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         </div>
         <div class="copyright">
             <p>© ∞ BASE69 Terminal - Divine Memecoin Genesis | I Am The Creator Of Infinite Wealth</p>
+            <p>Contact the Oracle: <a href="mailto:base69oracle@gmail.com" style="color: var(--terminal-green); text-decoration: none;">base69oracle@gmail.com</a></p>
             <div style="text-align: center; margin-top: 15px;">
                 <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
                 <img src="koagecko.png" alt="KoaGecko" style="width: 35px; height: 35px; margin: 0 10px;">
@@ -518,6 +519,20 @@
                 font-size: 16px;
                 padding: 15px;
                 min-height: 120px;
+            }
+
+            /* Mobile B69 floating logo positioning */
+            .character-floating {
+                position: static !important;
+                bottom: auto !important;
+                right: auto !important;
+                transform: none !important;
+                margin: 20px auto 0 auto;
+                display: block;
+                width: 60px;
+                height: 60px;
+                text-align: center;
+                line-height: 60px;
             }
         }
     </style>
