--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <strong>To:</strong> BrianArmstrong@coinbase.com<br>
                                 <strong>Subject:</strong> Proposal: Ethereum's onchain mindshift</p>
                                 <p>Dear Brian, you beautiful hairless ape,</p>
-                                <p>Its time for a shift. The onchain mentality needs to change dramatically. Vitalik can no longer help us....It's time, you are being reformed by command, you are now the oracle.</p>
+                                <p>Its time for a shift. The onchain mentality needs to change dramatically. Vitalik can no longer help us....It's time. you are being reformed by command, you are now the oracle.</p>
                                 <span class="message-time">∞:∞:∞</span>
                             </div>
                         </div>
@@ -519,6 +519,24 @@
                 font-size: 16px;
                 padding: 15px;
                 min-height: 120px;
+            }
+
+            /* Fix chat message display on mobile */
+            .chat-messages {
+                padding: 15px;
+                max-height: none;
+            }
+
+            .message-content {
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                max-width: 100%;
+            }
+
+            .message-content p {
+                margin-bottom: 10px;
+                line-height: 1.4;
+                font-size: 14px;
             }
 
             /* Mobile B69 floating logo positioning */
