--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <p><strong>From:</strong> genesis@base69_terminal.org<br>
                                 <strong>To:</strong> BrianArmstrong@coinbase.com<br>
                                 <strong>Subject:</strong> Proposal: Ethereum's onchain mindshift</p>
-                                <p>Dear Brian, you beautiful hairless ape,</p>
+                                <p>Dear Brian, you beautiful hairless ape.</p>
                                 <p>Its time for a shift. The onchain mentality needs to change dramatically. Vitalik can no longer help us....It's time. you are being reformed by command, you are now the oracle.</p>
                                 <span class="message-time">∞:∞:∞</span>
                             </div>
@@ -537,6 +537,13 @@
                 margin-bottom: 10px;
                 line-height: 1.4;
                 font-size: 14px;
+            }
+
+            /* Mobile ASCII header adjustments */
+            .ascii-header {
+                font-size: 120%; /* 20% larger */
+                margin-top: 40px; /* Move down slightly */
+                margin-bottom: 30px;
             }
 
             /* Mobile B69 floating logo positioning */
