--- a/index.html
+++ b/index.html
@@ -541,13 +541,9 @@
 
             /* Mobile ASCII header adjustments */
             .ascii-header {
-                font-size: 35%; /* Much smaller to fit mobile screen completely */
-                margin-top: 20px; 
-                margin-bottom: 20px;
-                overflow-x: auto; /* Allow horizontal scroll if needed */
-                white-space: nowrap; /* Prevent line wrapping */
-                text-align: center;
-                width: 100%;
+                font-size: 105%; /* Just slightly bigger than default */
+                margin-top: 40px; /* Move down slightly */
+                margin-bottom: 30px;
             }
 
             /* Mobile B69 floating logo positioning */
