--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
             /* Mobile ASCII header adjustments */
             .ascii-header {
-                font-size: 105%; /* Just slightly bigger than default */
+                font-size: 90%; /* Reduced size */
                 margin-top: 40px; /* Move down slightly */
                 margin-bottom: 30px;
             }
