--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 
             /* Mobile ASCII header adjustments */
             .ascii-header {
-                font-size: 90%; /* Reduced size */
+                font-size: 75%; /* Further reduced size */
                 margin-top: 40px; /* Move down slightly */
                 margin-bottom: 30px;
             }
