--- a/index.html
+++ b/index.html
@@ -164,13 +164,21 @@
             <p>© ∞ BASE69 Terminal - Divine Memecoin Genesis | I Am The Creator Of Infinite Wealth</p>
             <p>Contact the Oracle: <a href="mailto:base69oracle@gmail.com" style="color: var(--terminal-green); text-decoration: none;">base69oracle@gmail.com</a></p>
             <div style="text-align: center; margin-top: 15px;">
-                <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koagecko.png" alt="KoaGecko" style="width: 35px; height: 35px; margin: 0 10px;">
+        <div style="text-align: center; margin-top: 15px;">
+                <a href="https://dexscreener.com/base/0xa68090b68e6615b0bdc7d674c1e493d2b50dfecc" target="_blank">
+                    <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
+                </a>
+                <a href="https://www.geckoterminal.com/base/pools/0xa68090b68e6615b0bdc7d674c1e493d2b50dfecc" target="_blank">
+                    <img src="koagecko.png" alt="KoaGecko" style="width: 35px; height: 35px; margin: 0 10px;">
+                </a>
                 <img src="koatg.png" alt="KoaTG" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koadextools.png" alt="KoaDexTools" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koax.png" alt="KoaX" style="width: 35px; height: 35px; margin: 0 10px;">
+                <a href="https://www.dextools.io/app/en/base/pair-explorer/0xa68090b68e6615b0bdc7d674c1e493d2b50dfecc?t=1751035488819" target="_blank">
+                    <img src="koadextools.png" alt="KoaDexTools" style="width: 35px; height: 35px; margin: 0 10px;">
+                </a>
+                <a href="https://x.com/Base69Terminal" target="_blank">
+                    <img src="koax.png" alt="KoaX" style="width: 35px; height: 35px; margin: 0 10px;">
+                </a>
             </div>
-        </div>
     </footer>
 
     <script>
