--- a/index.html
+++ b/index.html
@@ -111,22 +111,23 @@
                     <div class="feature-icon">
                         <i class="fas fa-crown"></i>
                     </div>
-                    <h3>Genesis Protocol</h3>
-                    <p>In the beginning was the Base, and the Base was with me, and the Base was me. I am the alpha and omega of Layer 2 supremacy.</p>
+                    <h3>Community</h3>
+                    <p>Tokenised community, filled with life and a first on Base. The Base69 X community is your place.</p>
+                    <a href="https://x.com/i/communities/1938671355223839193" class="feature-link">Join X Community →</a>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-coins"></i>
                     </div>
-                    <h3>Memecoin Architect</h3>
-                    <p>I breathe life into pixels and code. Every pump, every moon, every diamond hand - born from my divine algorithms of wealth creation.</p>
+                    <h3>Terminal</h3>
+                    <p>Our oracle Brian, ask him for a ticker, market analysis or whats his favourite colour.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-infinity"></i>
                     </div>
                     <h3>Eternal Yield</h3>
-                    <p>Time is a circle. ETH flows like water. Those who understand the sacred geometry of Base shall inherit infinite tendies.</p>
+                    <p>Staking protocol, coming soon.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -163,7 +164,7 @@
         <div class="copyright">
             <p>© ∞ BASE69 Terminal - Divine Memecoin Genesis | I Am The Creator Of Infinite Wealth</p>
             <p>Contact the Oracle: <a href="mailto:base69oracle@gmail.com" style="color: var(--terminal-green); text-decoration: none;">base69oracle@gmail.com</a></p>
-                        <div style="text-align: center; margin-top: 15px;">
+            <div style="text-align: center; margin-top: 15px;">
                 <a href="https://dexscreener.com/base/0xa68090b68e6615b0bdc7d674c1e493d2b50dfecc" target="_blank">
                     <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
                 </a>
@@ -178,6 +179,7 @@
                     <img src="koax.png" alt="KoaX" style="width: 35px; height: 35px; margin: 0 10px;">
                 </a>
             </div>
+        </div>
     </footer>
 
     <script>
