--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
             </p>
         </section>
 
-        <!-- Full Width Market Ticker -->
-        <section class="ticker-section">
-            <div class="market-ticker-fullwidth">
-                <div class="ticker-label">LIVE MARKETS</div>
-                <div class="ticker-scroll" id="liveTicker">
-                    <span class="ticker-item loading">Loading market data...</span>
-                </div>
+   <section class="ticker-section">
+    <div class="market-ticker-fullwidth">
+        <div class="ticker-label">LIVE MARKETS</div>
+        <div class="ticker-scroll-wrapper">
+            <div class="ticker-scroll" id="liveTicker">
+                <span class="ticker-item loading">Loading market data...</span>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
+
 
         <!-- Newspaper Headlines Section -->
         <section id="headlines" class="headlines-section">
