--- a/index.html
+++ b/index.html
@@ -174,16 +174,24 @@
                 </ul>
             </div>
         </div>
-        <div class="copyright">
-            <p>© ∞ NAD6900 Terminal - Keone Hon's Oracle | The Flippening Is Upon Us</p>
-            <div style="text-align: center; margin-top: 15px;">
-                <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koagecko.png" alt="KoaGecko" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koatg.png" alt="KoaTG" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koadextools.png" alt="KoaDexTools" style="width: 35px; height: 35px; margin: 0 10px;">
-                <img src="koax.png" alt="KoaX" style="width: 35px; height: 35px; margin: 0 10px;">
-            </div>
-        </div>
+       <div class="copyright">
+    <p>© ∞ NAD6900 Terminal - Keone Hon's Oracle | The Flippening Is Upon Us</p>
+    <div style="text-align: center; margin-top: 15px;">
+
+        <!-- KOAdex -->
+        <a href="https://dexscreener.com/monad/0xe0caa966b3a39959804d848e25b12d2f2f1ef41f" target="_blank">
+            <img src="koadex.png" alt="KoaDex" style="width: 35px; height: 35px; margin: 0 10px;">
+        </a>
+
+        <!-- KOAX -->
+        <a href="https://x.com/MONAD6900" target="_blank">
+            <img src="koax.png" alt="KoaX" style="width: 35px; height: 35px; margin: 0 10px;">
+        </a>
+
+        <!-- Removed: koagecko, koatg, koadextools -->
+    </div>
+</div>
+
     </footer>
 
     <script>
